--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: Check the site
       id: hello
-      uses: srt32/uptime
+      uses: srt32/uptime@master
       with:
         url-to-hit: 'http://blog.simontaranto.com'
         expected-statues: "200,301"
