--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
       id: hello
       uses: srt32/uptime@master
       with:
-        url-to-hit: 'http://blog.simontaranto.com'
+        url-to-hit: "http://blog.simontaranto.com"
         expected-statues: "200,301"
