--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
       id: hello
       uses: srt32/uptime@master
       with:
-        url-to-hit: "https://blog.simontaranto.com"
+        url-to-hit: "https://simontaranto.com"
         expected-statues: "200,301"
