--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
       uses: srt32/uptime@master
       with:
         url-to-hit: "https://simontaranto.com"
-        expected-statues: "200,301"
+        expected-statuses: "200,301"
